# python_app_template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  utils.py
tests/: test_main.py
