[tool.poetry]
name = "python_app_template"
version = "0.1.0"
description = "A starter Python app with testing, linting and CI"
authors = ["Basten Dekoninck <basten.dekoninck@riskconcile.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
black = "^24.3"
ruff = "^0.3.2"
mypy = "^1.8"
pre-commit = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true